dataset1235/2025-2/2947369575/users/1218589494/executions/1003782500_2819779400.log
== SUBMISSION (2025-09-01 23:14:02)
-- CODE: 
p1 = int(input("quantidade de jogos encomendados:"))
p2 = float(input("valor unitário de cada jogo:"))
p3 = float(input("valor do frete:"))
p4 = (p1*p2)+p3
print(p4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos encomendados:valor unitário de cada jogo:valor do frete:1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos encomendados:valor unitário de cada jogo:valor do frete:240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos encomendados:valor unitário de cada jogo:valor do frete:540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos encomendados:valor unitário de cada jogo:valor do frete:765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos encomendados:valor unitário de cada jogo:valor do frete:162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos encomendados:valor unitário de cada jogo:valor do frete:618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:12:56)
-- CODE: 
p1 = int(input("quantidade de jogos encomendados:"))
p2 = float(input("valor unitário de cada jogo:"))
p3 = float(input("valor do frete:"))

p4 = ((p1*p2)+p3))
print(p4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 23:12:59)
-- CODE: 
p1 = int(input("quantidade de jogos encomendados:"))
p2 = float(input("valor unitário de cada jogo:"))
p3 = float(input("valor do frete:"))

p4 = ((p1*p2)+p3))
print(p4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:12:56)
-- CODE: 
p1 = int(input("quantidade de jogos encomendados:"))
p2 = float(input("valor unitário de cada jogo:"))
p3 = float(input("valor do frete:"))

p4 = ((p1*p2)+p3))
print(p4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 5
    p4 = ((p1*p2)+p3))
                     ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
